Fix page content overflow
The issue was with "height: 100vh" property that caused the overflow
of the content when the browser bookmark tab was turned on.

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,6 @@ html {
 }
 
 body {
-  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,6 +25,7 @@ body {
 .instrument-container {
   display: flex;
   gap: 20px;
+  margin-top: 30px;
 }
 
 .row {
